--- a/style/layout/_navigation.scss
+++ b/style/layout/_navigation.scss
@@ -1,12 +1,15 @@
 .landing__navigation {
     position: absolute;
     top: 3rem;
-    right: 5rem;
+    right: 0;
     max-width: 112.5rem;
     margin: 0 auto;
     display: flex;
-    justify-content: space-between;
     z-index: 4;
+
+    @media(max-width: $breakpoint-sm) {
+        right: -6rem;
+    }
 
     &-selected {
         cursor: pointer;
@@ -33,6 +36,11 @@
                 background-repeat: no-repeat;
                 background-position: center center;
                 background-size: cover;
+
+                @media($breakpoint-sm) {
+                    width: 2rem;
+                    height: 1.5rem;
+                }
             }
         }
 
@@ -45,6 +53,11 @@
             background-repeat: no-repeat;
             background-position: center center;
             background-size: cover;
+
+            @media($breakpoint-sm) {
+                width: 2rem;
+                height: 1.5rem;
+            }
         }
     }
 }
@@ -73,7 +86,7 @@
     &-link{
         font-size: 1.5rem;
         color: black;
-        width: 7.5rem;
+        width: 6rem;
         margin-top: 0.5rem;
         display: block;
         padding: 5px 5px;
