--- a/style/sections/_about.scss
+++ b/style/sections/_about.scss
@@ -3,6 +3,7 @@
 .about {
   background-color: $primary-color;
   background-image: linear-gradient(135deg, $primary-color 0%, $secondary-color 100%);
+  background-size: cover;
   color: $white-color;
   border-top: 0px;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
