--- a/style/sections/_projects.scss
+++ b/style/sections/_projects.scss
@@ -144,6 +144,7 @@
 
     &-image {
       width: 90%;
+      height: auto;
       margin: 0 auto;
 
       @media (max-width: $breakpoint-l) {
@@ -152,7 +153,7 @@
       }
 
       @media (max-width: $breakpoint-xs) {
-        height: 100%;
+       max-width: 100%;
       }
 
       &-content {
@@ -170,25 +171,13 @@
         }
 
         @media (max-width: $breakpoint-md) {
-          width: 45rem;
-        }
-
-        @media (max-width: $breakpoint-tablet) {
-          width: 38rem;
-        }
-
-        @media (max-width: $breakpoint-sm) {
-          width: 45rem;
+          width: 100%;
         }
 
         @media (max-width: $breakpoint-xs) {
         border: 1px solid $light-grey;
         box-shadow: none;
         margin-bottom: 3.2rem;
-        }
-
-        @media (max-width: $breakpoint-xxs) {
-          width: 35rem;
         }
       }
     }
